--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,28 @@
   </head>
   <body>
     <h1 id="header">Student Details</h1>
+    <img id="photo" src="assets/photo.jpg" width="50" height="60" />
+    <br /><br />
+    <label id="firstName"> Rejan </label>
+    <br /><br />
+    <label id="lastName"> Biswakarma </label>
+    <br /><br />
+    <label id="address"> Itahari-07, Sunsari, Nepal </label>
+    <br /><br />
+    <label id="phone"> 9819022648 </label>
+    <br /><br />
+    <br /><br />
+    <input
+      type="file"
+      (change)="onFileSelectss($event.target)"
+      id="afile"
+      accept=".png, .jpg, .jpeg"
+      multiple
+    />
+    <button (click)="downloadss()">Multiple Export</button>
+    <br /><br />
+
+    <h1 id="header">Student Details</h1>
     <img id="photo1" src="assets/photo.jpg" width="50" height="60" />
     <br /><br />
     <label id="firstName1"> Rejan </label>
@@ -17,10 +39,6 @@
     <br /><br />
     <label id="phone1"> 9819022648 </label>
     <br /><br />
-
-    <!-- <label for="files">Select files:</label>
-    <input type="file" id="files" name="files" multiple /><br /><br />
-    <input type="submit" /> -->
 
     <input
       type="file"
@@ -41,10 +59,6 @@
     <label id="phone2"> 9819022648 </label>
     <br /><br />
 
-    <!-- <label for="files">Select files:</label>
-    <input type="file" id="files" name="files" multiple /><br /><br />
-    <input type="submit" /> -->
-
     <input
       type="file"
       (change)="onFileSelect($event.target)"
@@ -54,7 +68,7 @@
     />
 
     <br /><br />
-    <button (click)="download()">Export</button>
+    <button (click)="download()">BulkExport</button>
     <br /><br />
   </body>
 </html>
