--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,13 +50,13 @@
 
     <img id="photo2" src="assets/photo.jpg" width="50" height="60" />
     <br /><br />
-    <label id="firstName2"> Rejan </label>
+    <label id="firstName2"> Dikshya </label>
     <br /><br />
-    <label id="lastName2"> Biswakarma </label>
+    <label id="lastName2"> Gazmer </label>
     <br /><br />
     <label id="address2"> Itahari-07, Sunsari, Nepal </label>
     <br /><br />
-    <label id="phone2"> 9819022648 </label>
+    <label id="phone2"> 9878797 </label>
     <br /><br />
 
     <input
